<resources>
    <string name="app_name">福大地图</string>
    <string name="login_num">学号/教工号：</string>
    <string name="login_pwd">密码:</string>
    <string name="login_pwd_hint">(默认为身份证后六位)</string>
    <string name="login">登录</string>
    <string name="visitor_login">游客登录</string>
    <string name="custom">自定义</string>
    <string name="begin_navigation">开始导航</string>
    <string name="my_position">我的位置</string>
    <string name="input_start_place">输入起点</string>
    <string name="input_destination">输入终点</string>
    <string name="please_input_start_place">请输入起点</string>
    <string name="please_input_destination">请输入终点</string>
    <string name="navigation">导航</string>
    <string name="confirm">确定</string>
    <string name="bybike">随行单车</string>
    <string name="spot">景点</string>
    <string name="indoor">室内图</string>
    <string name="open_gps">请先打开GPS，提高定位准确度</string>
    <string name="collect_route">收藏路径</string>
    <string name="route_navigation">路线规划</string>
    <string name="route">路线</string>
    <string name="aboutUs">关于我们</string>
    <string name="changePwd">修改密码</string>
</resources>
