<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="com.hd.app.LoginActivity"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="741dp"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/fuda_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/appname" />

        <android.support.v7.widget.CardView
            android:layout_width="330dp"
            android:layout_height="330dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/transparentWhite"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_num"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="HardcodedText"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/login_pwd"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/login_pwd_hint"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="HardcodedText"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:layout_weight="1"

                    >

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/remember_pwd_box"
                        android:background="@drawable/checkbox_style"
                        android:button="@null"
                        android:layout_width="30dp"
                        android:layout_height="30dp"

                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:text="记住密码"
                        android:textColor="#000000"
                        android:layout_weight="1"
                        />

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_gravity="right"
                        android:background="@drawable/button_shape"
                        android:text="@string/login"
                        android:textColor="#ffffff"

                        />




                </LinearLayout>
                <TextView
                    android:id="@+id/visitor_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visitor_login"
                    android:layout_gravity="bottom"
                    />


            </LinearLayout>



        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>